2003-10-21 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b201

	* Fixed bug where ".", ".." and ".users" would display with 
	  "Attention adminstrator, remove these directories".

	* Added screen shots for all skins.

2003-10-30 Chris Schwerdt <muti@afterglo.ws> 1.4.1-cvs-b200

	* Added move-album command to gallery_remote2.php

	* Added move-album to gallery remote protocol documentation.

2003-10-29 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b199

	* Language: - Found some untranslated strings
		    - Synced languages
		    - Updated German (de_DE)

	* Changes: Tweaked Appereance at some places.

2003-10-29 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b198

	* Language: - Updated German (de_DE), Polish (pl_PL)
		    - Bugfixed Report.

2003-10-21 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b197

	* Don't display the voting instructions if there are no images.
	  (thanks to Jens).

	* Clean up of results display for polls.

2003-10-21 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b196

	* Fixed bug in voting.  Critique votes were being set to default 
	  values for images that weren't voted for.

2003-10-25 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b195

	* Language: - Synced Languages.
		    - Updated German (de_DE), Bulgarian (bg_BG)

2003-10-21 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b194

	* Bug fixes (mostly thanks to h0bbel).  Viz:

	* Don't try to send mail to pseudo users.

	* New password link is now sent (if mail requested) to newly created 
	  users from "Manage Users"

	* CreateNewUser now returns user rather than 1 on success (so hash 
	  can be added if email sent).

	* As password change page is now correctly inserted into the email as 
	  new password link, no longer include pretty-printed passwords in 
	  email.

	* One sentence changed in translation, due to misplaced <br> - sorry 
	  Jens!

2003-10-25 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b193

	* Language: Update Vietnamese (vi_VN)
