@@ -1,0 +1,4 @@
+<?php
+$name=_("Bblue");
+$description=_("White with grey pipes and blue highlight");
+?>
