@@ -1,0 +1,4 @@
+<?php
+$name=_("Bgreen2");
+$description=_("White with grey pipes and lime green highlight");
+?>
