@@ -1,0 +1,4 @@
+<?php
+$name=_("Black");
+$description=_("Black with grey pipes");
+?>
