@@ -1,0 +1,4 @@
+<?php
+$name=_("Blue Mod");
+$description=_("Blue cell-like background");
+?>
