@@ -1,0 +1,4 @@
+<?php
+$name=_("bpurble");
+$description=_("White with grey pipes and purple highlight");
+?>
