@@ -1,0 +1,4 @@
+<?php
+$name=_("Bubbles");
+$description=_("White with pale blue pipes highlights");
+?>
