@@ -1,0 +1,4 @@
+<?php
+$name=_("Butterfly Green");
+$description=_("White with green pipes and butterfly motif");
+?>
