@@ -1,0 +1,4 @@
+<?php
+$name=_("Green Purple");
+$description=_("Green with purple and greend textured pipes");
+?>
