@@ -1,0 +1,4 @@
+<?php
+$name=_("Hot Red");
+$description=_("Black with red pipes and highlights, white text");
+?>
