@@ -1,0 +1,4 @@
+<?php
+$name=_("Lilac");
+$description=_("Pale purple with grey pipes and white highlight");
+?>
