@@ -1,0 +1,4 @@
+<?php
+$name=_("Paint");
+$description=_("Pastel background with blue pipes and grey text");
+?>
