@@ -1,0 +1,4 @@
+<?php
+$name=_("Red Marble");
+$description=_("Marblelized background with brown pipes and white text");
+?>
