@@ -1,0 +1,4 @@
+<?php
+$name=_("Slick");
+$description=_("Graduated grey background with grey pipes and red highlight");
+?>
