@@ -1,0 +1,4 @@
+<?php
+$name=_("Suit");
+$description=_("Black with brown pipes and white text");
+?>
