@@ -1,0 +1,4 @@
+<?php
+$name=_("White");
+$description=_("White with pale pipes and rust text");
+?>
