@@ -1,0 +1,4 @@
+<?php
+$name=_("Yellow");
+$description=_("Yellow with yellow pipes and red highlights");
+?>
