@@ -1,3 +1,10 @@
+2003-10-21 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b202
+	
+	* In Config. Wizard, made the names of each skin a link to its
+	  screen shot.
+	
+	* Added first-draft descriptions of all current skins.
+
 2003-10-21 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b201
 
 	* Fixed bug where ".", ".." and ".users" would display with 
